fixed styling causing overflow for experience

--- a/src/styles/Experience.less
+++ b/src/styles/Experience.less
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; // Make the component take up the whole screen
+    min-height: 100vh; // Make the component take up the whole screen
     padding: 20px;
   
     // Universal transition properties for all transitions
@@ -63,7 +63,7 @@
     // Styles for responsive layout on mobile devices
     @media (max-width: 767px) {
       width: 100%;
-      
+
     }
   }
   
